Issue #1784424 by mikeker: Refactored getting existing and default values.
Issue #1666896 by Staratel: Fixed Filter captions on BEF settings form are empty if filter labels are empty.
Issue #1798350 by mikeker: Fixed: secondary options were using the filter label instead of ID.
By mikeker: Allow rewriting of filter values (similar to the rewrite combined sort option)

Better Exposed Filters 7.x-3.0-beta2  2012-09-13
------------------------------------------------
Issue #975376 by mikeker, gordon: Inital port.  Note: only supports Views 3.x as there is no 2.x release planned for D7.
Issue #1109950 by mikeker, Francois LR: Fixes errors in taxonomy tree
Issue #1099528 by mikeker: Radio button labels not displayed
Issue #1128688 by sreynen: Select All/None not working on nested checkboxes
Issue #1111712 by mikeker: Adds Links as an option for filters
mikeker: Fixed attributes, select all/none issues
Issue #1120244 by mikeker: Fixed collapsible filter options
Issue #1132818 by mikeker: Allows more specific targeting of BEF options based on filter options
Issue #1162488 by klickreflex: Fixes incorrect HTML in nested displays
By mikeker: Added datepicker option
Issue #1194102 by dj1999: Adds BEF options to 'is all of' filters
Issue #1149254 by aaronbauman: Hides Apply button when exposed filters are set to hidden
Issue #1227168 by gionnibgud: Adds IDs to select_as_links filter options
Issue #1260194 by zhuber: Adds toggle functionality to filter links (added --author attribution in a later commit)
Issue #1099528 by Murz: Fixes incorrect depth of '- Any -' option
Issue #1241960 by mikeker: Fixes E_STRICT warning
Issue #1217204 by mikeker: Fixes Undefined index errors when BEF settings page is raised as a standalong page
Issue #1281348 by mikeker: form.js and collapse.js not being aggregated properly
Issue #1272694 by samhassell and mikeker: correctly sets form-item classes for wrapper divs
Issue #1290630 by d.clarke: Removes duplicated IDs from radio buttons